Fix centering on social icons on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -59,6 +59,7 @@
     float: none;
     text-align: center;
     padding-top: $spacing-unit / 2;
+    padding-right: 0;
   }
 
   a {
